[gd_scene load_steps=7 format=2]

[ext_resource path="res://planetarium/gui/menu_panel.gd" type="Script" id=1]
[ext_resource path="res://planetarium/gui/lock_visible_ckbx.tscn" type="PackedScene" id=2]
[ext_resource path="res://ivoyager/gui_mods/control_draggable.tscn" type="PackedScene" id=3]
[ext_resource path="res://ivoyager/gui_widgets/main_menu.tscn" type="PackedScene" id=4]
[ext_resource path="res://ivoyager/gui_widgets/link_label.tscn" type="PackedScene" id=5]
[ext_resource path="res://ivoyager/gui_widgets/version_label.tscn" type="PackedScene" id=6]

[node name="MenuPanel" type="PanelContainer"]
anchor_left = 1.0
anchor_right = 1.0
offset_left = -108.0
offset_bottom = 182.0
script = ExtResource( 1 )

[node name="VBox" type="VBoxContainer" parent="."]
offset_left = 7.0
offset_top = 7.0
offset_right = 101.0
offset_bottom = 198.0
mouse_filter = 2
alignment = 1

[node name="MarginContainer1" type="MarginContainer" parent="VBox"]
offset_right = 94.0
offset_bottom = 35.0
mouse_filter = 2
theme_override_constants/margin_right = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_left = 10
theme_override_constants/margin_bottom = 10

[node name="MainMenu" parent="VBox/MarginContainer1" instance=ExtResource( 4 )]
offset_left = 39.0
offset_top = 25.0
offset_right = 39.0
offset_bottom = 25.0
size_flags_horizontal = 4

[node name="MarginContainer2" type="MarginContainer" parent="VBox"]
offset_top = 39.0
offset_right = 94.0
offset_bottom = 191.0
mouse_filter = 2
theme_override_constants/margin_right = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_left = 17
theme_override_constants/margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="VBox/MarginContainer2"]
offset_left = 17.0
offset_top = 10.0
offset_right = 84.0
offset_bottom = 142.0
mouse_filter = 2
theme_override_constants/separation = 8

[node name="HomePage" parent="VBox/MarginContainer2/VBox" instance=ExtResource( 5 )]
offset_top = 0.0
offset_right = 67.0
offset_bottom = 15.0

[node name="Credits" parent="VBox/MarginContainer2/VBox" instance=ExtResource( 5 )]
offset_top = 23.0
offset_right = 67.0
offset_bottom = 38.0

[node name="Feedback" parent="VBox/MarginContainer2/VBox" instance=ExtResource( 5 )]
offset_top = 46.0
offset_right = 67.0
offset_bottom = 61.0
text = "[url]Feedback[/url]"
text = "Feedback"

[node name="SupportUs" parent="VBox/MarginContainer2/VBox" instance=ExtResource( 5 )]
offset_top = 69.0
offset_right = 67.0
offset_bottom = 99.0
text = "[url]Support Us![/url]"
text = "Support Us!"

[node name="Spacer" type="Control" parent="VBox/MarginContainer2/VBox"]
offset_top = 107.0
offset_right = 67.0
offset_bottom = 110.0
custom_minimum_size = Vector2( 0, 3 )
mouse_filter = 2

[node name="VersionLabel" parent="VBox/MarginContainer2/VBox" instance=ExtResource( 6 )]
offset_top = 118.0
offset_right = 67.0
offset_bottom = 132.0

[node name="LockVisibleCkbx" parent="." instance=ExtResource( 2 )]
offset_left = 77.0
offset_top = 7.0
offset_right = 101.0
offset_bottom = 31.0

[node name="ControlMod" parent="." instance=ExtResource( 3 )]
